<resources>
    <string name="app_name">Book management</string>

    <string name="detailBookIsbnIdentifier">ISBN: </string>
    <string name="detailBookCommentIdentifier">Comment: </string>
    <string name="detailBookButtonDelete">delete</string>
    <string name="detailBookButtonLending">lend</string>
    <string name="detailBooksLendingPlannedTimeIdentifier">planned back:</string>
    <string name="detailLendingButtonGiveBack">returned</string>
    <string name="detailLendingButtonDelete">delete</string>
    <string name="detailLendingButtonConfirm">confirm</string>
    <string name="detailLendingEditTextLender">Name</string>
    <string name="detailLendingEditTextComment">Comment</string>
    <string name="detailLendingTextViewActualDate">Select lend start</string>
    <string name="detailLendingTextViewPlannedDate">Select planned end</string>
    <string name="mainActivityFilterFavourites" >Show favorites only</string>
    <string name="mainActivitySortingByTitel">Sorting by titel</string>
    <string name="mainActivitySortingByAuthor">Sorting by author</string>
    <string name="detailLendingEditTextActualDate">actual date</string>
    <string name="detailLendingEditTextPlannedDate">planned back</string>
    <string name="apiErrorFailure">Error! Please check your network connecton and reload.</string>
    <string name="apiErrorResponse" >Incorrect response received from the server. Please try again.</string>
    <string name="apiNoBookReceived" >No books found!</string>
    <string name="dialogDeleteBook" >Do you want to delete the book?</string>
    <string name="dialogDeleteLending">Do you want to delete the lending?</string>
    <string name="detailLendingButtonAddManual">Add manual</string>
    <string name="detailLendingEditTextTitle">Title</string>
    <string name="detailLendingEditTextAuthor">Author</string>
    <string name="dialogAddBook">Do you want to add the book?</string>
    <string name="noIsbnReceived">No ISBN</string>
    <string name="noTitleReceived">No Title</string>
    <string name="noAuthorReceived">No Author</string>
    <string name="mainActivityFilterLended" >Show lended only</string>
    <string name="detailBookAddingSearchHint">Search for title or isbn</string>
    <string name="app_description" >This is the main window of the book management app. New books can be added using the symbol at the top right.</string>string>
    <string-array name="filter_array">
        <item>Title</item>
        <item>Author</item>
        <item>Favorite</item>
        <item>Lended</item>
    </string-array>
</resources>