<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorBackground"
    tools:context=".DetailActivityLending">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detailLendingGuidelineVertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"
        />

    <EditText
        android:id="@+id/detailLendingEditTextLender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/detailLendingEditTextLender"
        android:layout_marginRight="10dp"
        android:textSize="22dp"
        android:maxLines="1"
        android:gravity="left"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:inputType="textPersonName"
        app:layout_goneMarginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/detailLendingEditTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detailLendingEditTextComment"
        android:layout_marginRight="20dp"
        android:textSize="22dp"
        android:maxLines="3"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:inputType="textPersonName"
        app:layout_goneMarginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailLendingEditTextLender"
        />

    <TextView
        android:id="@+id/detailLendingTextViewActualDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detailLendingTextViewActualDate"
        android:layout_marginRight="20dp"
        android:textSize="22dp"
        android:maxLines="1"
        android:gravity="left"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        app:layout_goneMarginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailLendingEditTextComment"
        />

    <TextView
        android:id="@+id/detailLendingTextViewPlannedDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detailLendingTextViewPlannedDate"
        android:layout_marginRight="20dp"
        android:textSize="22dp"
        android:maxLines="1"
        android:gravity="left"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        app:layout_goneMarginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailLendingTextViewActualDate"
        />


    <Button
        android:id="@+id/detailLendingButtonGiveBack"
        style="@style/buttonStyleDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/detailLendingButtonGiveBack"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintBottom_toTopOf="@id/detailLendingButtonDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detailLendingGuidelineVertical50"
        />
    <Button

        android:id="@+id/detailLendingButtonDelete"
        style="@style/buttonStyleDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/detailLendingButtonDelete"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detailLendingGuidelineVertical50"
        />

    <Button
        android:id="@+id/detailLendingConfirm"
        style="@style/buttonStyleDefault"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/detailLendingButtonConfirm"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detailLendingGuidelineVertical50"
        />
</androidx.constraintlayout.widget.ConstraintLayout>